# STR

./: .gitignore  CMakeLists.txt  list.c
